# razer-control-win

./: .gitignore  Cargo.toml  MEMO.md  SOS.md  build.rs  code_revise.md  usb_tree_port10.md
data/: resources.rc
scripts/: compare-gpu-backends.ps1  gen_icon.py  gpu-source-common.ps1  install-daemon-task.ps1  log-gpu-backends.ps1  test-power-profiles.ps1
src/: comms.rs  lib.rs
src/cli/: main.rs
src/daemon/: config.rs  device.rs  gpu.rs  main.rs  power.rs  temps.rs  temps_ssd_includes.rs
src/gui/: app.rs  constants.rs  display.rs  gaming_mode.rs  gui_config.rs  main.rs  poll.rs  startup.rs  tray.rs  widgets.rs
src/gui/tabs/: keyboard.rs  mod.rs  power.rs  system.rs
tools/: ec_probe.py
