[package]
name = "razer-control-win"
version = "0.1.0"
edition = "2021"
authors = ["kraven1109 <tmquangvn@gmail.com>"]
description = "Razer laptop control daemon for Windows — lightweight Synapse replacement"

[[bin]]
name = "razer-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "razer-cli"
path = "src/cli/main.rs"

[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
hidapi     = { version = "2.6", default-features = false, features = ["windows-native"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode    = "1.3"
serde-big-array = "0.5"
clap       = { version = "4.4", features = ["derive"] }
log        = "0.4"
env_logger = "0.11"
rand       = "0.8"
lazy_static = "1.4"
ctrlc      = { version = "3", features = ["termination"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",   # PDH counters (Task Manager GPU API)
    "Win32_System_Power",         # GetSystemPowerStatus
] }
